--- a/CNN_for_APROF.ipynb
+++ b/CNN_for_APROF.ipynb
@@ -2200,11 +2200,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "0c6RaMGj252y"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'X_train_cleaned' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[1], line 32\u001b[0m\n\u001b[1;32m     22\u001b[0m datagen \u001b[38;5;241m=\u001b[39m ImageDataGenerator(\n\u001b[1;32m     23\u001b[0m     rotation_range\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m15\u001b[39m,\n\u001b[1;32m     24\u001b[0m     width_shift_range\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     28\u001b[0m     fill_mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnearest\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     29\u001b[0m )\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Fit the generator to your data (optional, depending on data type)\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m datagen\u001b[38;5;241m.\u001b[39mfit(\u001b[43mX_train_cleaned\u001b[49m)\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# Create the model\u001b[39;00m\n\u001b[1;32m     35\u001b[0m model \u001b[38;5;241m=\u001b[39m build_no_callbacks_model()\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'X_train_cleaned' is not defined"
+          ]
+        }
+      ],
       "source": [
         "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.callbacks import ReduceLROnPlateau, EarlyStopping\n",
@@ -2457,7 +2469,7 @@
         "id": "1Jbglc071R_z"
       },
       "source": [
-        "# Comparing results from different approaches"
+        "# Comparison of results from different approaches"
       ]
     },
     {
